added doc to init endpoint
